# researchbench-release

./: .gitignore  NOTES.md  README.md  REFACTOR_SKETCH.md  pyproject.toml
logs/claude-37-syw/logs/: 2025-10-26T17-24-31-07-00_CE-accretors_CpTApLNVU7DLXT6ZWrWreB.eval  2025-10-26T17-24-38-07-00_asassn-21qj_m9xHmmHH8xWt5qY4TWwuQK.eval  2025-10-26T17-24-53-07-00_spectral-sirens-gp_YnorE4o7NepihJNKgn7WmC.eval  2025-10-26T17-26-01-07-00_galactic-dtd_j2ZpzDrez7K8yap6uTcj38.eval  2025-10-26T17-26-04-07-00_stellar-obliquity_2VvWPj4b6bB6iNjCFFqk3C.eval  2025-10-26T17-26-04-07-00_topdown_a9Yy67u6YwEU9R6svixDcJ.eval  2025-10-26T17-26-14-07-00_v773-tau_EjRo8Q9Ggqbrna4RZmAcFs.eval  2025-10-26T17-26-27-07-00_rossby-ridge_cFZaXMZ8nxSLjG3i9MYFFE.eval  2025-10-26T17-26-30-07-00_bbh-basis_md3sYexsB8JQfKiqcvJH5x.eval  2025-10-26T17-26-44-07-00_gse-merger_jrR9qY4mtpWkdsDvrUpVZ2.eval  2025-10-26T17-26-53-07-00_habitable_SmUpZWsWUk8MgcuykigaNP.eval  2025-10-26T17-56-18-07-00_v773-tau_o53J78g5LrLgTF68uuPEyU.eval  2025-10-26T17-56-22-07-00_galactic-dtd_V9skMZyb4eGqdHbCpnvis8.eval  2025-10-26T17-56-24-07-00_stellar-obliquity_BxDN8Tfko6EfdW2hxKSR5Y.eval  2025-10-26T17-56-24-07-00_topdown_hikqKM5wjFL5uX93yUk348.eval  2025-10-26T17-56-41-07-00_rossby-ridge_7cfNboTDadobFdP4ScHzJA.eval  2025-10-26T17-57-41-07-00_CE-accretors_KUtkVCjWeP6uvCCfKV3nJY.eval  (+5 more)
rb_site/: index.html
src/: __init__.py  logging_config.py
src/dataset/: dataloader.py  text_loader.py
src/evaluation/: __init__.py  download_utils.py  inspect_task.py  run_single.py  setup.py
(+262 files in other folders)
